attached_assets/Pasted--1-302-172-31-196-92-25-Dec-2024-12-37-29-GET-HTTP-1-1-200-172-31-196-92-25-De-1735169994139.txt
.1" 302 -
172.31.196.92 - - [25/Dec/2024 12:37:29] "GET / HTTP/1.1" 200 -
172.31.196.92 - - [25/Dec/2024 12:37:35] "GET /games HTTP/1.1" 500 -
Traceback (most recent call last):
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/flask/app.py", line 1536, in __call__
    return self.wsgi_app(environ, start_response)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/flask/app.py", line 1514, in wsgi_app
    response = self.handle_exception(e)
               ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/flask/app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/flask/app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/flask/app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/flask/app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/app.py", line 296, in games
    return render_template('games.html', random=random, level=level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/flask/templating.py", line 149, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/jinja2/environment.py", line 1087, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/jinja2/environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/jinja2/environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/jinja2/environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
  File "/home/runner/Website-Editor/.pythonlibs/lib/python3.12/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/runner/Website-Editor/templates/games.html", line 340, in template
    {% endblock %} {% block content %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endblock'.
172.31.196.92 - - [25/Dec/2024 12:37:35] "GET /games?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 304 -
172.31.196.92 - - [25/Dec/2024 12:37:36] "GET /games?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 304 -
